# KSAM-2022-Robotic-Competition

./: .gitignore  .gitignore.swp  README.md
YOLOX/: .pre-commit-config.yaml  MANIFEST.in  cmd  digiag_1st.py  hubconf.py  nano.py  requirements.txt  (+2 more)
ros/src/robot_gazebo/: package.xml
ros/src/robot_gazebo/launch/: scenario_1_world.launch  scenario_2_world.launch  scenario_3_world.launch  scenario_4_world.launch  scenario_5_world.launch  scenario_6_world.launch  turtlebot3_gazebo_rviz.launch
ros/src/robot_gazebo/models/obstacle/: obstacle.sdf
ros/src/robot_gazebo/models/tree/: model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
ros/src/robot_gazebo/models/wall_1/: model.config  model.sdf
ros/src/robot_gazebo/models/wall_2/: model.config  model.sdf
ros/src/robot_gazebo/models/wall_3/: model.config  model.sdf
ros/src/robot_gazebo/models/wall_3_3/: model.config  model.sdf
ros/src/robot_gazebo/models/wall_4/: model.config  model.sdf
ros/src/robot_gazebo/models/wall_4_4/: model.config  model.sdf
ros/src/robot_gazebo/rviz/: turtlebot3_gazebo_model.rviz
ros/src/robot_gazebo/worlds/: scenario_2_world.sdf  scenario_3_world.sdf  scenario_4_world.sdf  scenario_5_world.sdf  scenario_6_world.sdf
ros/src/robot_slam/: CMakeLists.txt  package.xml
ros/src/robot_slam/config/: angle_filter.yaml  gmapping_params.yaml  karto_mapper_params.yaml  karto_mapper_params_Original.yaml
ros/src/robot_slam/launch/: robot_gmapping.launch  robot_karto.launch  robot_slam.launch  robot_slam_real.launch  robot_slam_simulation.launch
ros/src/robot_slam/rviz/: robot_gmapping.rviz
(+233 files in other folders)
